# solcrypt

./: .gitignore  Cargo.toml  README.md  idl.json
client/: codama.json  package.json
client/src/: config.ts  crypto.ts  index.ts  keypair.ts  transaction.ts
client/src/commands/: chats.ts  index.ts  init.ts  messages.ts  thread.ts
codama/: Cargo.toml
codama/src/: main.rs
program/: Cargo.toml
program/src/: constants.rs  error.rs  instruction.rs  lib.rs  processor.rs  state.rs  types.rs
program/tests/: test.rs
solcrypt-cli/: Cargo.toml
solcrypt-cli/src/: app.rs  client.rs  crypto.rs  events.rs  instructions.rs  main.rs  ui.rs
