[package]
name = "solcrypt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "solcrypt_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
default = []

[dependencies]
light-sdk-pinocchio = { version = "0.17.1", features = ["light-account"] }
light-sdk-types = "0.17.1"
light-hasher = "5.0.0"
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
light-macros = "2.2.0"
borsh = "0.10.4"
solana-pubkey = "2.3"
codama.workspace = true
solana-system-interface = "1"

[dev-dependencies]
light-program-test = "0.17.1"
light-client = "0.17.2"
tokio = "1.43.0"
solana-sdk = "2.3"
light-hasher = { version = "5.0.0", features = ["solana"] }
light-compressed-account = { version = "0.7.0", features = ["solana"] }
light-sdk = "0.17.1"
# Crypto dependencies for E2EE tests
sha2 = "0.10"
x25519-dalek = { version = "2", features = ["static_secrets"] }
aes-gcm = "0.10"
rand = "0.8"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint", "test-sbf"))',
]
