[package]
name = "solcrypt"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "lib"]
name = "solcrypt_program"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
test-sbf = []
bpf-entrypoint = []
default = []

[dependencies]
light-sdk-pinocchio = { workspace = true, features = [
    "light-account",
    "codama",
    "wincode",
] }
light-sdk-types = { workspace = true, features = ["codama"] }
light-hasher = { workspace = true, features = ["solana"] }
pinocchio = "0.9.2"
pinocchio-system = "0.4.0"
light-macros.workspace = true
solana-pubkey = "2.3"
codama.workspace = true
solana-system-interface = "1"
wincode.workspace = true

[dev-dependencies]
light-program-test.workspace = true
light-client.workspace = true
tokio.workspace = true
solana-sdk.workspace = true
light-compressed-account = { workspace = true, features = ["solana"] }
light-sdk = { workspace = true, features = ["wincode"] }
# Crypto dependencies for E2EE tests
sha2.workspace = true
x25519-dalek.workspace = true
aes-gcm.workspace = true
rand = "0.8"

[lints.rust.unexpected_cfgs]
level = "allow"
check-cfg = [
    'cfg(target_os, values("solana"))',
    'cfg(feature, values("frozen-abi", "no-entrypoint", "test-sbf"))',
]


[package.metadata.solana]
program-id = "AESxu6qe2Mo5Ue8KJo33Di5UT5dW5CmJQwxqHh8dNK6y"
