[package]
name = "solcrypt-cli"
version = "0.1.0"
edition = "2021"

[features]
# Here to make rust-analyzer happy
bpf-entrypoint = []
test-sbf = []

[dependencies]
# Local program crate
solcrypt = { path = "../program" }

# Light Protocol
light-client.workspace = true
light-sdk = { workspace = true, features = ["keccak", "wincode"] }

# Solana
solana-sdk.workspace = true

# CLI
clap = { version = "4", features = ["derive"] }

# Async
tokio.workspace = true

# Serialization (match program's version for compatibility)
wincode.workspace = true

# Crypto
aes-gcm.workspace = true
x25519-dalek.workspace = true
sha2.workspace = true

# Utils
bs58 = "0.5"
anyhow = "1"
chrono = "0.4"
hex = "0.4"
dotenv = "0.15"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"

# TUI
ratatui = "0.29"
crossterm = "0.28"
